feat: add geometry

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,24 +8,20 @@
       "program": "${file}",
       "console": "integratedTerminal",
       "args": [
-        "--dataroot",
-        "./datasets/pol_cvusa",
         "--name",
-        "pol_cvusa_pix2pix_lpips",
+        "pol_cvusa_pix2pix_perceptual",
         "--model",
         "pix2pix",
         "--gpu_ids",
-        "0",
+        "2",
         "--display_port",
         "8005",
-        "--preprocess",
-        "resize",
         "--netG",
         "unet_128",
-        "--load_size",
-        "128",
-        "--crop_size",
-        "128",
+        "--lambda_L1",
+        "1",
+        "--batch_size",
+        "8",
       ]
     },
   ]
